--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
 
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-6.0']
-          packages: ['g++-6', 'clang-6.0', 'ninja-build']
+          packages: ['g++-6', 'clang-6.0', 'ninja-build', 'lcov']
       env:
         - SHAPES_CXX=clang++-6.0
         - SHAPES_CC=clang-6.0
@@ -213,7 +213,7 @@ install:
 
   if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
     if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
-    if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt-get install lcov; fi
+    #if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt-get install lcov; fi
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
@@ -230,7 +230,7 @@ script:
   if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then
     lcov --version
     cmake --build . --target shapes_coverage
-    bash <(curl -s https://codecov.io/bash) -f coverage.info
+    bash <(curl -s https://codecov.io/bash) -X gcov
   fi
 - if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
 - cd ..
