--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 dist: xenial
-sudo: false
+sudo: required
 
 matrix:
   include:
@@ -8,17 +8,16 @@ matrix:
     # codecov, doxygen docs
 
     - os: linux
-      compiler: clang
+      compiler: gcc
       addons:
-
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-6.0']
-          packages: ['g++-6', 'clang-6.0', 'ninja-build', 'lcov']
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-8', 'ninja-build', 'lcov']
       env:
-        - SHAPES_CXX=clang++-6.0
-        - SHAPES_CC=clang-6.0
+        - SHAPES_CXX=g++-8
+        - SHAPES_CC=gcc-8
         - SHAPES_DOC=true
-        - SHAPES_ENABLE_COVERAGE=ON
+        - SHAPES_ENABLE_COVERAGE=true
         - GIT_NAME=travis-ci
         - GIT_EMAIL=pavel.simo@gmail.com
         - GITHUB_REPO=pavelsimo/pavelsimo.github.io
@@ -212,8 +211,16 @@ install:
   fi
 
   if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+
+    # installing doxygen
     if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
     #if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt-get install lcov; fi
+
+    # installing cmake
+    wget -O cmake.sh https://cmake.org/files/v3.10/cmake-3.10.0-rc1-Linux-x86_64.sh
+    mkdir -p /tmp/cmake
+    sudo sh cmake.sh --skip-license --exclude-subdir --prefix=/tmp/cmake
+    export PATH=/tmp/cmake/bin:$PATH
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
@@ -226,12 +233,13 @@ script:
 - cmake .. -GNinja -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
 - cmake --build . -- -j2
 - ctest -j2 --output-on-failure --verbose
+- if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
 - |
   if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then
     lcov --version
     cmake --build . --target shapes_coverage
-    bash <(curl -s https://codecov.io/bash) -X gcov
+    lcov --list coverage.info
+    bash <(curl -s https://codecov.io/bash) -f coverage.info
   fi
-- if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
 - cd ..
 
