:green_heart: attempt to fix codecov report

--- a/.travis.yml
+++ b/.travis.yml
@@ -237,10 +237,10 @@ script:
 - if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
 - |
   if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then
-    lcov --directory . --capture  --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
-    lcov --remove coverage.info '/usr/*' --output-file coverage.info
-    lcov --list coverage.info
-    bash <(curl -s https://codecov.io/bash) -f coverage.info
+    for filename in `find ../include -type f -name '*.hpp'`; do
+      gcov-8 -n -o . "$filename" > /dev/null
+    done
+    bash <(curl -s https://codecov.io/bash)
   fi
 - cd ..
 
