--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-8', 'ninja-build', 'lcov']
+          packages: ['g++-8', 'ninja-build', 'doxygen']
       env:
         - SHAPES_CXX=g++-8
         - SHAPES_CC=gcc-8
@@ -25,11 +25,14 @@ matrix:
         - GIT_BRANCH=master
 
       after_success:
-        - #cd build
+        - cd build
+        - for filename in `find "${$TRAVIS_BUILD_DIR}/include" -type f -name '*.hpp'`; do echo $filename; gcov-8 -n -o . $filename; done
+        - bash <(curl -s https://codecov.io/bash)
+        - cmake --build . --target shapes_documentation
         - mv docs/html docs/shapes
         - rm -rf docs/latex
         - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash "$TRAVIS_BUILD_DIR/thirdparty/git-update-ghpages/git-update-ghpages" -e; fi
-        - #cd ..
+        - cd ..
 
     # osx clang
 
@@ -207,21 +210,14 @@ install:
     brew update
     brew install cmake ninja
     brew upgrade cmake
-    if [[ "${SHAPES_DOC}" != "" ]]; then brew install doxygen; fi
   fi
 
   if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-
-    # installing doxygen
-    if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
-    #if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt-get install lcov; fi
-
     # installing cmake
     wget -O cmake.sh https://cmake.org/files/v3.10/cmake-3.10.0-rc1-Linux-x86_64.sh
     mkdir -p /tmp/cmake
     sudo sh cmake.sh --skip-license --exclude-subdir --prefix=/tmp/cmake
     export PATH=/tmp/cmake/bin:$PATH
-
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
@@ -230,15 +226,9 @@ install:
 - $CXX --version
 
 script:
-#- mkdir -p build && cd build
-- cmake . -GNinja -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
+- mkdir -p build && cd build
+- cmake .. -GNinja -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
 - cmake --build . -- -j2
 - ctest -j2 --output-on-failure --verbose
-- if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
-- |
-  if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then
-    #for filename in `find "${$TRAVIS_BUILD_DIR}/include" -type f -name '*.hpp'`; do echo $filename; gcov-8 -n -o . $filename; done
-    bash <(curl -s https://codecov.io/bash)
-  fi
-#- cd ..
+- cd ..
 
