--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
 
       after_success:
         - cd build
-        - for filename in `find "${$TRAVIS_BUILD_DIR}/include" -type f -name '*.hpp'`; do echo $filename; gcov-8 -n -o . $filename; done
+        - for filename in `find "${TRAVIS_BUILD_DIR}/include" -type f -name '*.hpp'`; do echo $filename; gcov-8 -n -o . $filename; done
         - bash <(curl -s https://codecov.io/bash)
         - cmake --build . --target shapes_documentation
         - mv docs/html docs/shapes
@@ -214,7 +214,7 @@ install:
 
   if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
     # installing cmake
-    wget -O cmake.sh https://cmake.org/files/v3.10/cmake-3.10.0-rc1-Linux-x86_64.sh
+    wget -O cmake.sh https://cmake.org/files/v3.14/cmake-3.14.0-rc4-Linux-x86_64.sh
     mkdir -p /tmp/cmake
     sudo sh cmake.sh --skip-license --exclude-subdir --prefix=/tmp/cmake
     export PATH=/tmp/cmake/bin:$PATH
@@ -227,7 +227,7 @@ install:
 
 script:
 - mkdir -p build && cd build
-- cmake .. -GNinja -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
+- cmake .. -GNinja -DSHAPES_ENABLE_COVERAGE:BOOL=${SHAPES_ENABLE_COVERAGE}
 - cmake --build . -- -j2
 - ctest -j2 --output-on-failure --verbose
 - cd ..
