--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
 
       after_success:
         - cd build
-        - for filename in `find "${PWD}" -type f -name '*.gcno'`; do echo $filename; gcov-8 -n -o . $filename; done
+        - for filename in `find "${PWD}" -type f -name '*.gcno'`; do echo $filename; gcov-8 $filename; done
         - bash <(curl -s https://codecov.io/bash)
         - cmake --build . --target shapes_documentation
         - mv docs/html docs/shapes
