:green_heart: attempt to fix appveyor ci

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,39 +5,39 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       platform: x86
       FLAGS: ""
-      GENERATOR: Visual Studio 14 2015
+      TARGET: Visual Studio 14 2015
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x86
       FLAGS: ""
-      GENERATOR: Visual Studio 15 2017
+      TARGET: Visual Studio 15 2017
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x86
       FLAGS: "/permissive- /std:c++latest /utf-8"
-      GENERATOR: Visual Studio 15 2017
+      TARGET: Visual Studio 15 2017
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       platform: x64
       FLAGS: ""
-      GENERATOR: Visual Studio 14 2015
+      TARGET: Visual Studio 14 2015
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x64
       FLAGS: ""
-      GENERATOR: Visual Studio 15 2017
+      TARGET: Visual Studio 15 2017
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x64
       FLAGS: "/permissive- /std:c++latest /utf-8"
-      GENERATOR: Visual Studio 15 2017
+      TARGET: Visual Studio 15 2017
 
 init:
   - cmake --version
   - msbuild /version
 
 before_build:
-  - cmake . -G "%GENERATOR%" -DCMAKE_CXX_FLAGS="%FLAGS%"
+  - cmake . -G "%TARGET%" -DCMAKE_CXX_FLAGS="%FLAGS%" -DNOGDI
 
 build_script:
   - cmake --build . --config Release
