--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,40 +4,40 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       platform: x86
-      FLAGS: ""
-      TARGET: Visual Studio 14 2015
+      SHAPES_CXX_FLAGS: ""
+      SHAPES_CXX: Visual Studio 14 2015
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x86
-      FLAGS: ""
-      TARGET: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: ""
+      SHAPES_CXX: Visual Studio 15 2017
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x86
-      FLAGS: "/permissive- /std:c++latest /utf-8"
-      TARGET: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: "/permissive- /std:c++latest /utf-8"
+      SHAPES_CXX: Visual Studio 15 2017
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       platform: x64
-      FLAGS: ""
-      TARGET: Visual Studio 14 2015
+      SHAPES_CXX_FLAGS: ""
+      SHAPES_CXX: Visual Studio 14 2015
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x64
-      FLAGS: ""
-      TARGET: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: ""
+      SHAPES_CXX: Visual Studio 15 2017
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x64
-      FLAGS: "/permissive- /std:c++latest /utf-8"
-      TARGET: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: "/permissive- /std:c++latest /utf-8"
+      SHAPES_CXX: Visual Studio 15 2017
 
 init:
   - cmake --version
   - msbuild /version
 
 before_build:
-  - cmake . -G "%TARGET%" -DCMAKE_CXX_FLAGS="%FLAGS%" -DNOGDI
+  - cmake . -G "%SHAPES_CXX%" -DCMAKE_CXX_FLAGS="%SHAPES_CXX_FLAGS%"
 
 build_script:
   - cmake --build . --config Release
