:green_heart: attempt to fix appveyor ci

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,33 +4,33 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       platform: x86
-      SHAPES_CXX_FLAGS: "-DNOGDI"
       SHAPES_CXX: Visual Studio 14 2015
+      SHAPES_CXX_FLAGS: "-DNOGDI"
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x86
-      SHAPES_CXX_FLAGS: ""
       SHAPES_CXX: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: "-DNOGDI"
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x86
-      SHAPES_CXX_FLAGS: "/permissive- /std:c++latest /utf-8"
       SHAPES_CXX: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: "/permissive- /std:c++latest /utf-8 -DNOGDI"
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       platform: x64
-      SHAPES_CXX_FLAGS: ""
       SHAPES_CXX: Visual Studio 14 2015
+      SHAPES_CXX_FLAGS: "-DNOGDI"
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x64
-      SHAPES_CXX_FLAGS: ""
       SHAPES_CXX: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: "-DNOGDI"
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       platform: x64
-      SHAPES_CXX_FLAGS: "/permissive- /std:c++latest /utf-8"
       SHAPES_CXX: Visual Studio 15 2017
+      SHAPES_CXX_FLAGS: "/permissive- /std:c++latest /utf-8 -DNOGDI"
 
 init:
   - cmake --version
