--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,4 +7,12 @@ foreach(file ${files})
   target_compile_definitions(${test_name} PRIVATE CATCH_CONFIG_MAIN)
   target_include_directories(${test_name} PUBLIC ${SHAPES_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/thirdparty)
   add_test(NAME ${test_name} COMMAND ${test_name})
+
+  if (${SHAPES_ENABLE_COVERAGE})
+    set_target_properties(${test_name} PROPERTIES CXX_STANDARD 11 COMPILE_FLAGS "-O0 -g -fprofile-arcs -ftest-coverage --coverage")
+    target_link_options(${test_name} PUBLIC "--coverage")
+  endif()
+
 endforeach()
+
+
