:green_heart: fix CI build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ target_include_directories(${SHAPES_LIBRARY}
 file(GLOB_RECURSE SOURCE_FILES
                   ${PROJECT_SOURCE_DIR}/include/simo/*.hpp
                   ${PROJECT_SOURCE_DIR}/include/simo/geom/*.hpp
+                  ${PROJECT_SOURCE_DIR}/include/simo/geom/detail/*.hpp
                   ${PROJECT_SOURCE_DIR}/include/simo/io/*.hpp
                   ${PROJECT_SOURCE_DIR}/tests/*.cpp)
 
