:rotating_light: remove linter warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-  add_compile_options(/W4 /wd4065 /wd4061 /wd4577)
+  add_compile_options(/W4 /EHsc /wd4065 /wd4061 /wd4577)
 endif()
 
 #
